# ThreadedBank

./: CMakeLists.txt  main.cpp
account/: Account.cpp  Account.h
anaf/: AnafAgent.cpp  AnafAgent.h
bank/: Bank.cpp  Bank.h
operation/: Operation.cpp  Operation.h
operator/: BankOperator.cpp  BankOperator.h
res/: accounts.txt
